feat(runner): introduce Azure Batch script runner (#79)